--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -34,9 +34,9 @@
                 <ul class="dropdown-menu" ngbDropdownMenu>
 
                     <li *ngSwitchCase="false">
-                        <a class="dropdown-item" routerLink="masternodes-online-supplement" (click)="collapseNavbar()" id="masternodes-online-supplement">
-                            <i class="fa fa-fw fa-sign-in" aria-hidden="true"></i>
-                            <span>masternodes.online Supplement</span>
+                        <a class="dropdown-item" routerLink="masternodes-online-supplement-public" (click)="collapseNavbar()" id="masternodes-online-supplement">
+                            <i class="fa fa-server" aria-hidden="true"></i>
+                            <span>Masternodes.online Supplement</span>
                         </a>
                     </li>
                 </ul>
@@ -58,6 +58,18 @@
                         <a class="dropdown-item" routerLink="test-1" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                             <i class="fa fa-fw fa-asterisk" aria-hidden="true"></i>
                             <span>Test 1</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="masternodes-online-supplement" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                            <i class="fa fa-fw fa-asterisk" aria-hidden="true"></i>
+                            <span>Masternodes Online Supplement</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="masternodes-online-supplement-public" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                            <i class="fa fa-fw fa-asterisk" aria-hidden="true"></i>
+                            <span>Masternodes Online Supplement Public</span>
                         </a>
                     </li>
                     <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
