About to update gateway based on model updates.

--- a/src/main/webapp/app/entities/masternodes-online-supplement/masternodes-online-supplement.component.html
+++ b/src/main/webapp/app/entities/masternodes-online-supplement/masternodes-online-supplement.component.html
@@ -38,7 +38,8 @@
             <th jhiSortBy="roiNodes"><span>Roi Nodes</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="numberRequired"><span>Number Required</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="minimumWorth"><span>Minimum Worth</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="githubPage"><span>Github Page</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="masternodesOnlineUrl"><span>Masternodes Online Url</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="githubUrl"><span>Github Url</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="githubCommits"><span>Github Commits</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="githubFirstCommit"><span>Github First Commit</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="githubLastCommit"><span>Github Last Commit</span> <span class="fa fa-sort"></span></th>
@@ -57,7 +58,8 @@
                 <td>{{masternodesOnlineSupplement.roiNodes}}</td>
                 <td>{{masternodesOnlineSupplement.numberRequired}}</td>
                 <td>{{masternodesOnlineSupplement.minimumWorth}}</td>
-                <td>{{masternodesOnlineSupplement.githubPage}}</td>
+                <td>{{masternodesOnlineSupplement.masternodesOnlineUrl}}</td>
+                <td>{{masternodesOnlineSupplement.githubUrl}}</td>
                 <td>{{masternodesOnlineSupplement.githubCommits}}</td>
                 <td>{{masternodesOnlineSupplement.githubFirstCommit | date:'medium'}}</td>
                 <td>{{masternodesOnlineSupplement.githubLastCommit | date:'medium'}}</td>
