Updated model according to needed info for master node analysis.

--- a/src/main/webapp/app/entities/masternodes-online-supplement/masternodes-online-supplement-detail.component.html
+++ b/src/main/webapp/app/entities/masternodes-online-supplement/masternodes-online-supplement-detail.component.html
@@ -24,9 +24,13 @@
         <dd>
             <span>{{masternodesOnlineSupplement.marketcap}}</span>
         </dd>
-        <dt><span>Roi Nodes</span></dt>
+        <dt><span>Roi</span></dt>
         <dd>
-            <span>{{masternodesOnlineSupplement.roiNodes}}</span>
+            <span>{{masternodesOnlineSupplement.roi}}</span>
+        </dd>
+        <dt><span>Nodes</span></dt>
+        <dd>
+            <span>{{masternodesOnlineSupplement.nodes}}</span>
         </dd>
         <dt><span>Number Required</span></dt>
         <dd>
@@ -36,9 +40,17 @@
         <dd>
             <span>{{masternodesOnlineSupplement.minimumWorth}}</span>
         </dd>
-        <dt><span>Github Page</span></dt>
+        <dt><span>Project Origin</span></dt>
         <dd>
-            <span>{{masternodesOnlineSupplement.githubPage}}</span>
+            <span>{{masternodesOnlineSupplement.projectOrigin}}</span>
+        </dd>
+        <dt><span>Masternodes Online Url</span></dt>
+        <dd>
+            <span>{{masternodesOnlineSupplement.masternodesOnlineUrl}}</span>
+        </dd>
+        <dt><span>Github Url</span></dt>
+        <dd>
+            <span>{{masternodesOnlineSupplement.githubUrl}}</span>
         </dd>
         <dt><span>Github Commits</span></dt>
         <dd>
