--- a/src/main/webapp/app/entities/masternodes-online-supplement/masternodes-online-supplement.component.html
+++ b/src/main/webapp/app/entities/masternodes-online-supplement/masternodes-online-supplement.component.html
@@ -35,9 +35,11 @@
             <th jhiSortBy="change"><span>Change</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="volume"><span>Volume</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="marketcap"><span>Marketcap</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="roiNodes"><span>Roi Nodes</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="roi"><span>Roi</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="nodes"><span>Nodes</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="numberRequired"><span>Number Required</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="minimumWorth"><span>Minimum Worth</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="projectOrigin"><span>Project Origin</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="masternodesOnlineUrl"><span>Masternodes Online Url</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="githubUrl"><span>Github Url</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="githubCommits"><span>Github Commits</span> <span class="fa fa-sort"></span></th>
@@ -55,9 +57,11 @@
                 <td>{{masternodesOnlineSupplement.change}}</td>
                 <td>{{masternodesOnlineSupplement.volume}}</td>
                 <td>{{masternodesOnlineSupplement.marketcap}}</td>
-                <td>{{masternodesOnlineSupplement.roiNodes}}</td>
+                <td>{{masternodesOnlineSupplement.roi}}</td>
+                <td>{{masternodesOnlineSupplement.nodes}}</td>
                 <td>{{masternodesOnlineSupplement.numberRequired}}</td>
                 <td>{{masternodesOnlineSupplement.minimumWorth}}</td>
+                <td>{{masternodesOnlineSupplement.projectOrigin}}</td>
                 <td>{{masternodesOnlineSupplement.masternodesOnlineUrl}}</td>
                 <td>{{masternodesOnlineSupplement.githubUrl}}</td>
                 <td>{{masternodesOnlineSupplement.githubCommits}}</td>
