--- a/src/main/webapp/app/masternodes-online-supplement-public/masternodes-online-supplement-public.component.html
+++ b/src/main/webapp/app/masternodes-online-supplement-public/masternodes-online-supplement-public.component.html
@@ -35,9 +35,11 @@
             <th jhiSortBy="change"><span>Change</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="volume"><span>Volume</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="marketcap"><span>Marketcap</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="roiNodes"><span>Roi Nodes</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="roi"><span>Roi</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="nodes"><span>Nodes</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="numberRequired"><span>Number Required</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="minimumWorth"><span>Minimum Worth</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="projectOrigin"><span>Project Origin</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="masternodesOnlineUrl"><span>Masternodes Online Url</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="githubUrl"><span>Github Url</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="githubCommits"><span>Github Commits</span> <span class="fa fa-sort"></span></th>
@@ -55,9 +57,11 @@
                 <td>{{masternodesOnlineSupplementPublic.change}}</td>
                 <td>{{masternodesOnlineSupplementPublic.volume}}</td>
                 <td>{{masternodesOnlineSupplementPublic.marketcap}}</td>
-                <td>{{masternodesOnlineSupplementPublic.roiNodes}}</td>
+                <td>{{masternodesOnlineSupplementPublic.roi}}</td>
+                <td>{{masternodesOnlineSupplementPublic.nodes}}</td>
                 <td>{{masternodesOnlineSupplementPublic.numberRequired}}</td>
                 <td>{{masternodesOnlineSupplementPublic.minimumWorth}}</td>
+                <td>{{masternodesOnlineSupplementPublic.projectOrigin}}</td>
                 <td>
                     <a href="{{masternodesOnlineSupplementPublic.masternodesOnlineUrl}}" target="_blank">
                         {{masternodesOnlineSupplementPublic.masternodesOnlineUrl}}
