Updated field names.

--- a/src/main/webapp/app/entities/masternodes-online-supplement/masternodes-online-supplement-detail.component.html
+++ b/src/main/webapp/app/entities/masternodes-online-supplement/masternodes-online-supplement-detail.component.html
@@ -56,13 +56,13 @@
         <dd>
             <span>{{masternodesOnlineSupplement.githubCommits}}</span>
         </dd>
-        <dt><span>Github First Commit</span></dt>
+        <dt><span>Created At</span></dt>
         <dd>
-            <span>{{masternodesOnlineSupplement.githubFirstCommit | date:'medium'}}</span>
+            <span>{{masternodesOnlineSupplement.createdAt | date:'medium'}}</span>
         </dd>
-        <dt><span>Github Last Commit</span></dt>
+        <dt><span>Pushed At</span></dt>
         <dd>
-            <span>{{masternodesOnlineSupplement.githubLastCommit | date:'medium'}}</span>
+            <span>{{masternodesOnlineSupplement.pushedAt | date:'medium'}}</span>
         </dd>
         <dt><span>Notes</span></dt>
         <dd>
