--- a/src/main/webapp/app/entities/masternodes-online-supplement/masternodes-online-supplement-dialog.component.html
+++ b/src/main/webapp/app/entities/masternodes-online-supplement/masternodes-online-supplement-dialog.component.html
@@ -78,16 +78,16 @@
                 [(ngModel)]="masternodesOnlineSupplement.githubCommits" />
         </div>
         <div class="form-group">
-            <label class="form-control-label" for="field_githubFirstCommit">Github First Commit</label>
+            <label class="form-control-label" for="field_createdAt">Created At</label>
             <div class="d-flex">
-                <input id="field_githubFirstCommit" type="datetime-local" class="form-control" name="githubFirstCommit" [(ngModel)]="masternodesOnlineSupplement.githubFirstCommit"
+                <input id="field_createdAt" type="datetime-local" class="form-control" name="createdAt" [(ngModel)]="masternodesOnlineSupplement.createdAt"
                 />
             </div>
         </div>
         <div class="form-group">
-            <label class="form-control-label" for="field_githubLastCommit">Github Last Commit</label>
+            <label class="form-control-label" for="field_pushedAt">Pushed At</label>
             <div class="d-flex">
-                <input id="field_githubLastCommit" type="datetime-local" class="form-control" name="githubLastCommit" [(ngModel)]="masternodesOnlineSupplement.githubLastCommit"
+                <input id="field_pushedAt" type="datetime-local" class="form-control" name="pushedAt" [(ngModel)]="masternodesOnlineSupplement.pushedAt"
                 />
             </div>
         </div>
