--- a/src/main/webapp/app/masternodes-online-supplement-public/masternodes-online-supplement-public-dialog.component.html
+++ b/src/main/webapp/app/masternodes-online-supplement-public/masternodes-online-supplement-public-dialog.component.html
@@ -55,7 +55,7 @@
         <div class="form-group">
             <label class="form-control-label" for="field_githubPage">Github Page</label>
             <input type="text" class="form-control" name="githubPage" id="field_githubPage"
-                [(ngModel)]="masternodesOnlineSupplementPublic.githubPage" />
+                [(ngModel)]="masternodesOnlineSupplementPublic.githubUrl" />
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_githubCommits">Github Commits</label>
