--- a/src/main/webapp/app/masternodes-online-supplement-public/masternodes-online-supplement-public.component.html
+++ b/src/main/webapp/app/masternodes-online-supplement-public/masternodes-online-supplement-public.component.html
@@ -64,12 +64,12 @@
                 <td>{{masternodesOnlineSupplementPublic.projectOrigin}}</td>
                 <td>
                     <a href="{{masternodesOnlineSupplementPublic.masternodesOnlineUrl}}" target="_blank">
-                        {{masternodesOnlineSupplementPublic.masternodesOnlineUrl}}
+                        Profile
                     </a>
                 </td>
                 <td>
                     <a href="{{masternodesOnlineSupplementPublic.githubUrl}}" target="_blank">
-                        {{masternodesOnlineSupplementPublic.githubUrl}}
+                        github
                     </a>
                 </td>
                 <td>{{masternodesOnlineSupplementPublic.githubCommits}}</td>
