May have worked around jenkins build issues.

--- a/src/main/webapp/app/masternodes-online-supplement-public/masternodes-online-supplement-public.component.html
+++ b/src/main/webapp/app/masternodes-online-supplement-public/masternodes-online-supplement-public.component.html
@@ -1,6 +1,6 @@
 <div>
     <h2>
-        <span>Masternodes Online Supplement</span>
+        <span>Masternodes Online Supplement ..</span>
         <!--<button class="btn btn-primary float-right jh-create-entity create-masternodes-online-supplement-public" [routerLink]="['/', { outlets: { popup: ['masternodes-online-supplement-public-new'] } }]">-->
             <!--<span class="fa fa-plus"></span>-->
             <!--<span class="hidden-sm-down" >-->
