Attempting to use password for local mongo.

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -3,7 +3,7 @@
         <span class="hipster img-fluid rounded"></span>
     </div>
     <div class="col-md-9">
-        <h1 class="display-4">Welcome to Cryptocurrency Services.</h1>
+        <h1 class="display-4">Welcome to Cryptocurrency Services....</h1>
         <p class="lead">We are a resource for cryptocurrency enthusiasts.</p>
 
         <div [ngSwitch]="isAuthenticated()">
